# pymso5000-mcp

./: .gitignore  README.md  find_mso5000.py  mcp_mso5000.py  pyproject.toml
.cursor/: mcp.json
src/pymso5000/: mso5000.py
